--- a/opensearch-docker-compose-withoutsecurity.yaml
+++ b/opensearch-docker-compose-withoutsecurity.yaml
@@ -7,6 +7,7 @@ services:
     environment:
       - "discovery.type=single-node"
       - "plugins.security.disabled=true"
+      - "path.repo: /usr/share/opensearch/backup"
     ports:
       - "9200:9200"
       - "9600:9600"
